--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Página de login com HTML e CSS</h1>
-            <img src="img/logodev.svg" alt="LogoTipo">
+            <img src="img/logodev.svg" class="left-login-image" alt="LogoTipo">
         </div>
         <div class="right-login">
             <div class="card-login">
